--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    tools:context=".LoginActivity">
+    tools:context=".Activity.LoginActivity">
 
     <EditText
         android:id="@+id/emailEditText"
@@ -28,6 +28,7 @@
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="로그인"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
@@ -37,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
+        android:enabled="false"
         android:text="회원가입"
         app:layout_constraintEnd_toStartOf="@+id/loginButton"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
